--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
   }
 }
