--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "App.js",
   "scripts": {
     "start": "parcel index.html",
-    "Build": "parcel build index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
